fix margin-bottom wrap

--- a/style.sass
+++ b/style.sass
@@ -123,8 +123,9 @@ select:not([multiple])
 		margin-bottom: -4rem
 
 .wrap
-	margin-bottom: 5rem	
-
+	margin-bottom: 0rem	
+	+media-breakpoint-up(sm)
+		margin-bottom: 5rem
 .container-fluid
 	min-height: $headerheight
 
